test/trivial/bradc/undefinedfn2.chpl
proc main() {
  var x = 1;
  foo(x);
}
